--- a/generators/11ty-app/template/package.json
+++ b/generators/11ty-app/template/package.json
@@ -28,6 +28,7 @@
     "rimraf": "3.0.2",
     "rollup": "2.46.0",
     "rollup-plugin-filesize": "9.1.1",
+    "rollup-plugin-minify-html-literals": "1.2.6",
     "rollup-plugin-terser": "7.0.2",
     "standard": "16.0.3",
     "stylelint": "13.13.0",
