--- a/generators/vite-app/template/package.json
+++ b/generators/vite-app/template/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "description": "{{app_name}}",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@ficusjs/renderers": "^4.0.0",
     "ficusjs": "^3.8.0",
-    "snowpack": "^3.7.1"
+    "vite": "^2.6.0"
   }
 }
