--- a/generators/11ty-app/template/package.json
+++ b/generators/11ty-app/template/package.json
@@ -16,22 +16,22 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "0.12.1",
-    "@ficusjs/renderers": "3.1.0",
-    "@ficusjs/testing": "1.1.0",
-    "ava": "3.15.0",
-    "clean-css": "5.2.2",
-    "cross-env": "7.0.3",
-    "ficusjs": "3.14.0",
-    "html-minifier": "4.0.0",
-    "npm-run-all": "4.1.5",
-    "rimraf": "3.0.2",
-    "rollup": "2.62.0",
-    "rollup-plugin-filesize": "9.1.1",
-    "rollup-plugin-minify-html-literals": "1.2.6",
-    "rollup-plugin-terser": "7.0.2",
-    "standard": "16.0.3",
-    "stylelint": "13.13.1",
-    "stylelint-config-standard": "22.0.0"
+    "@11ty/eleventy": "^1.0.0",
+    "@ficusjs/renderers": "^4.3.0",
+    "@ficusjs/testing": "^1.1.0",
+    "ava": "^4.0.1",
+    "clean-css": "^5.2.2",
+    "cross-env": "^7.0.3",
+    "ficusjs": "^3.15.0",
+    "html-minifier": "^4.0.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.64.0",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-minify-html-literals": "^1.2.6",
+    "rollup-plugin-terser": "^7.0.2",
+    "standard": "^16.0.4",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0"
   }
 }
