--- a/generators/rocket-app/template/package.json
+++ b/generators/rocket-app/template/package.json
@@ -2,13 +2,14 @@
   "name": "{{kebabCase app_name}}",
   "version": "0.1.0",
   "description": "{{app_name}}",
+  "type": "module",
   "scripts": {
     "build": "rocket build",
     "dev": "npm start",
-    "lint": "standard \"src/**/*.mjs\"",
     "preview": "rocket preview --open",
     "start": "NODE_DEBUG=engine:rendering rocket start --open",
-    "test": "ava test/**/*.spec.mjs"
+    "test": "ava test/**/*.spec.mjs",
+    "lint": "standard \"src/**/*.mjs\""
   },
   "devDependencies": {
     "@ficusjs/renderers": "^5.1.0",
