feat: add parcel and typescript apps

--- a/generators/11ty-app/template/package.json
+++ b/generators/11ty-app/template/package.json
@@ -1,6 +1,7 @@
 {
   "name": "{{kebabCase app_name}}",
   "version": "0.1.0",
+  "private": true,
   "description": "{{app_name}}",
   "scripts": {
     "prebuild": "rimraf build",
