--- a/generators/parcel-app/template/package.json
+++ b/generators/parcel-app/template/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "description": "{{app_name}}",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build"
+    "dev": "parcel",
+    "build": "parcel build"
   },
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@ficusjs/renderers": "^5.3.1",
     "ficusjs": "^6.1.1",
-    "snowpack": "^3.8.8"
-  }
+    "parcel": "^2.8.2"
+  },
+  "source": "src/index.html"
 }
